# ExampleCommunicator

./: CMakeLists.txt  README.md
cmake/: Boost.cmake
include/public/: Communicator.hpp  Communicator_Factory.hpp
src/: CMakeLists.txt  Communicator_Factory.cpp
src/communicators/: HTTP.cpp  HTTP.hpp
tests/unit/: CMakeLists.txt  test_communicator_factory.cpp
